initial version of the shop

--- a/shop.html
+++ b/shop.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="style_program.css" type="text/css">
+    
     <link href='https://fonts.googleapis.com/css?family=Jaldi' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Meddon' rel='stylesheet'>
     <title>Krioukov.Academy</title>
@@ -42,4 +43,12 @@
         </div>
     </div>
     <hr>
+    <div>
+        <h3>Shopping Cart</h3>
+        <div id="shoppingCart">
+        </div>
+        <h3>Total Price: <span id="total"></span></h3>
+    </div>
+    <div id="courseList"></div>
+    <script src="shop.js"></script> 
 </body>
