--- a/program.html
+++ b/program.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="stylesheet" href="style_program.css" type="text/css">
+    <script src="shop.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Jaldi' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Meddon' rel='stylesheet'>
     <title>Krioukov.Academy</title>
