added sending email, after user selects the courses

--- a/application.html
+++ b/application.html
@@ -51,11 +51,12 @@
                                 <h1>Course application</h1>
                                 <div>
                                     <h4>Please, select a course you are interested in:</h4>
-                                    <input type="checkbox" name="course" value="Course1">Course1<br>
-                                    <input type="checkbox" name="course" value="Course2">Course2<br>
-                                    <input type="checkbox" name="course" value="Course3">Course3<br>
-                                    <input type="checkbox" name="course" value="Course4">Course4<br>
-                                    <input type="checkbox" name="course" value="Course5">Course5<br>
+                                    <input type="checkbox" name="course" value="Course1">Drawing course, 29.06.20 - 03.07.20<br>
+                                    <input type="checkbox" name="course" value="Course2">Painting masterclass, 29.06.20 - 03.07.20<br>
+                                    <input type="checkbox" name="course" value="Course3">COPIC-, Manga-Workshop, 29.06.20 - 03.07.20<br>
+                                    <input type="checkbox" name="course" value="Course4">Painting, 06.07.20 - 10.07.20<br>
+                                    <input type="checkbox" name="course" value="Course5">Oil painting masterclass, 06.07.20 - 10.07.20<br>
+                                    <input type="checkbox" name="course" value="Course5">COPIC-, Manga-Workshop, 06.07.20 - 10.07.20<br>
                                 </div>
                                 <div>
                                         <h4>Your approximate level in the course topic:</h4>
